Updated talks and papers.

--- a/newsframe.html
+++ b/newsframe.html
@@ -14,17 +14,29 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">20.03.2025</td>
+			<td width=70%><i>Invited Talk at Nottingham University (UK):</i> 
+			TBA. 
+			</td><td class="linkcell">
+			</td></tr>	
 <tr><td class="datecell">10-12.03.2025</td>
 			<td width=70%><i>Plenary Talk at the <a href="https://members.economicscience.org/Calendar/moreinfo.php?org_id=ESA&eventid=139079" target="_blank"> 2025 Asia-Pacific Meeting of the Economic Science Association</a>,
 			Osaka (Japan):</i> 
 			Learning Preferences from Response Times.
 			</td><td class="linkcell">
 			</td></tr>
-<tr><td class="datecell">25.11.2024</td>
-			<td width=70%><i>Invited Talk at Universidad de Alicante (Spain):</i> 
-			Noise and Bias: The Determinants of Economic Decisions. 
+			</tbody>
+</table>
+
+<h2>2025</h2>
+		    
+<table class="papertable">
+	<tbody>
+<tr><td class="datecell">29.01.2025</td>
+			<td width=70%><i>Invited Talk at Warwick Business School (UK):</i> 
+			Noise and Bias: The Determinants of Economic Decisions.
 			</td><td class="linkcell">
-			</td></tr>	
+			</td></tr>
 				</tbody>
 </table>
 
@@ -32,6 +44,12 @@
 
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">25.11.2024</td>
+			<td width=70%><i>Invited Talk at Universidad de Alicante (Spain):</i> 
+			Noise and Bias: The Determinants of Economic Decisions. 
+			</td><td class="linkcell">
+			</td></tr>	
+				</tbody>
 <tr><td class="datecell">7-8.11.2024</td>
 			<td width=70%><i>Plenary Talk at the <a href="https://conferences.ncl.ac.uk/neew/" target="_blank">Newcastle Experimental Economics Workshop</a>,
 			Newcastle (UK):</i> 
