--- a/papersframe.html
+++ b/papersframe.html
@@ -30,7 +30,8 @@
 			<tr>
 			<td width=85%><i>The Framing of Elections: Cooperation vs. Competition</i>, 
 			Carlos Al&oacute;s-Ferrer, Michele Garagnani, and Jaume Garc&iacute;a-Segarra, <strong>Social Choice and Welfare</strong>, forthcoming.
-			</td><td class="linkcell"><!--<a href="https://doi.org/10.1016/j.jet.2024.105941" target="_blank">-->Journal Link coming soon.</a>
+			</td><td class="linkcell"><a href="https://rdcu.be/d6YEe" target="_blank">SharedIt Link</a>
+         <br><a href="https://doi.org/10.1007/s00355-024-01580-9" target="_blank">Journal Link</a>	
 			</td>
 		</tr> 
 		<tr>
