--- a/papersframe.html
+++ b/papersframe.html
@@ -27,6 +27,12 @@
       
       <table class="papertable">
 	<tbody>
+     <tr>
+			<td width=85%><i>An Inexpensive Method to Measure Latent Toxoplasmosis and its Behavioral Consequences</i>, 
+			Anja Achtziger, Carlos Al&oacute;s-Ferrer, and Michele Garagnani, <strong>Acta Psychologica</strong>, 254, April 2025, 104814.
+			</td><td class="linkcell"><a href="https://doi.org/10.1016/j.actpsy.2025.104814" target="_blank">Journal Link</a>
+			</td>
+		</tr> 
 			<tr>
 			<td width=85%><i>The Framing of Elections: Cooperation vs. Competition</i>, 
 			Carlos Al&oacute;s-Ferrer, Michele Garagnani, and Jaume Garc&iacute;a-Segarra, <strong>Social Choice and Welfare</strong>, forthcoming.
