Updated talks and papers

--- a/homeframe.html
+++ b/homeframe.html
@@ -16,8 +16,8 @@ Universities of Vienna and Salamanca, and a frequent Visiting Professor at New Y
 <p>My research focuses on understanding and improving human economic decisions, ranging from decisions under risk to strategic decisions (game theory) and voting.
  For that I use decision neuroscience ("neuroeconomics"), behavioral experiments, and mathematical modeling. 
  I maintain a <a href="https://www.psychologytoday.com/intl/blog/decisions-and-the-brain" target="_blank">"Decisions and the Brain" blog at Psychology Today</a> and 
- a <a href="http://alosferrer.wordpress.com" target="_blank">personal blog at Wordpress</a>. I also co-organize the 
- <a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a> of the <a href="https://iarep.org/" target="_blank">IAREP</a>.</p>
+ a <a href="http://alosferrer.wordpress.com" target="_blank">personal blog at Wordpress</a>. <!--I also co-organize the 
+ <a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a> of the <a href="https://iarep.org/" target="_blank">IAREP</a>.--></p>
 
        <h2>5 selected recent publications</h2>
 
