--- a/papersframe.html
+++ b/papersframe.html
@@ -27,10 +27,12 @@
       
       <table class="papertable">
 	<tbody>
-     <tr>
-			<td width=85%><i>An Inexpensive Method to Measure Latent Toxoplasmosis and its Behavioral Consequences</i>, 
-			Anja Achtziger, Carlos Al&oacute;s-Ferrer, and Michele Garagnani, <strong>Acta Psychologica</strong>, 254, April 2025, 104814.
-			</td><td class="linkcell"><a href="https://doi.org/10.1016/j.actpsy.2025.104814" target="_blank">Journal Link</a>
+	<tr>
+			<td width=85%><i>Improving Numerical Measures of Human Feelings: The Case of Pain</i>, 
+			Michele Garagnani, Petra Schweinhardt, Philippe Tobler, and Carlos Al&oacute;s-Ferrer, <strong>Social Science and Medicine</strong>, forthcoming.
+			</td><td class="linkcell">
+			<!--<a href="https://" target="_blank">SharedIt Link</a>
+         <br><a href="https://doi.org/" target="_blank">Journal Link</a>-->	
 			</td>
 		</tr> 
 			<tr>
@@ -39,6 +41,13 @@
 			</td><td class="linkcell"><a href="https://rdcu.be/d6YEe" target="_blank">SharedIt Link</a>
          <br><a href="https://doi.org/10.1007/s00355-024-01580-9" target="_blank">Journal Link</a>	
 			</td>
+		</tr> 
+     <tr>
+			<td width=85%><i>An Inexpensive Method to Measure Latent Toxoplasmosis and its Behavioral Consequences</i>, 
+			Anja Achtziger, Carlos Al&oacute;s-Ferrer, and Michele Garagnani, <strong>Acta Psychologica</strong>, 254, April 2025, 104814.
+			</td><td class="linkcell"><a href="https://doi.org/10.1016/j.actpsy.2025.104814" target="_blank">Journal Link</a>
+			<br><a href="https://www.psychologytoday.com/us/blog/decisions-and-the-brain/202503/cats-brain-parasites-and-unemployment" target="_blank">Psychology Today</a>
+			<br><a href="https://nadaesgratis.es/admin/gatos-parasitos-y-desempleo" target="_blank">Nada es Gratis</a></td>
 		</tr> 
 		<tr>
 			<td width=85%><i>A Characterization of the Luce Choice Rule for an Arbitrary Collection of Menus</i>, 
