Updated papers and news

--- a/papersframe.html
+++ b/papersframe.html
@@ -29,15 +29,20 @@
 	<tbody>
 	<tr>
 			<td width=85%><i>Improving Numerical Measures of Human Feelings: The Case of Pain</i>, 
-			Michele Garagnani, Petra Schweinhardt, Philippe Tobler, and Carlos Al&oacute;s-Ferrer, <strong>Social Science and Medicine</strong>, forthcoming.
+			Michele Garagnani, Petra Schweinhardt, Philippe Tobler, and Carlos Al&oacute;s-Ferrer, <strong>Social Science and Medicine</strong>, November 2025, 118472.
+			
+			<ul><li>Press Coverage: <a href="https://newatlas.com/health-wellbeing/pain-assessment-tool-monetary-method/" target="_blank">New Atlas</a>,
+			<a href="https://medicalxpress.com/news/2025-09-price-pain.html" target="_blank">Medical Xpress</a>,
+			<a href="https://www.medicaleconomics.com/view/can-i-pay-for-your-suffering-" target="_blank">Medical Economics</a>, BBC Radio Lancashire (06.10.2025), and others.
+			</li></ul>
+			
 			</td><td class="linkcell">
-			<!--<a href="https://" target="_blank">SharedIt Link</a>
-         <br><a href="https://doi.org/" target="_blank">Journal Link</a>-->	
+		   <a href="https://doi.org/10.1016/j.socscimed.2025.118472" target="_blank">Journal Link</a>	
 			</td>
 		</tr> 
 			<tr>
 			<td width=85%><i>The Framing of Elections: Cooperation vs. Competition</i>, 
-			Carlos Al&oacute;s-Ferrer, Michele Garagnani, and Jaume Garc&iacute;a-Segarra, <strong>Social Choice and Welfare</strong>, forthcoming.
+			Carlos Al&oacute;s-Ferrer, Michele Garagnani, and Jaume Garc&iacute;a-Segarra, <strong>Social Choice and Welfare</strong>, 65 (2), September 2025, 363-385.
 			</td><td class="linkcell"><a href="https://rdcu.be/d6YEe" target="_blank">SharedIt Link</a>
          <br><a href="https://doi.org/10.1007/s00355-024-01580-9" target="_blank">Journal Link</a>	
 			</td>
