Added link to TWS podcast

--- a/newsframe.html
+++ b/newsframe.html
@@ -22,12 +22,19 @@
 		    
 <table class="papertable">
 	<tbody>
+	<tr><td class="datecell">14.10.2025</td>
+			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">PRESS:</b> 
+			Robbing the many to pay the one: interview in TWS partners' podcast <a href="https://www.tws-partners.com/podcast/" target="_blank">"Game Changer,"</a> available online. 
+			</td><td class="linkcell">
+			<a href="https://www.tws-partners.com/podcast/" target="_blank">Link to the podcast page</a>
+			</td> 
+		</tr>
 		<tr><td class="datecell">01.10.2025</td>
 			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">PRESS:</b> 
 			My research on pain measurement has been covered on 
 			<a href="https://newatlas.com/health-wellbeing/pain-assessment-tool-monetary-method/" target="_blank">New Atlas</a> (monthly visitors 5.2m),
 			<a href="https://medicalxpress.com/news/2025-09-price-pain.html" target="_blank">Medical Xpress</a> (monthly visitors 2m),
-			and <a href="https://www.medicaleconomics.com/view/can-i-pay-for-your-suffering-" target="_blank">Medical Economics</a> (monthly visitors 88,000), among others.
+			and <a href="https://www.medicaleconomics.com/view/can-i-pay-for-your-suffering-" target="_blank">Medical Economics</a> (monthly visitors 88,000), among others (including an interview in BBC Radio Lancashire).
 			</td><td class="linkcell">
 			<a href="https://newatlas.com/health-wellbeing/pain-assessment-tool-monetary-method/" target="_blank">New Atlas</a><br>
 			<a href="https://medicalxpress.com/news/2025-09-price-pain.html" target="_blank">Medical Xpress</a><br>
