--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="sidebar">
     
 		<p></p>    
-      <img src="pictures/Alos-Ferrer.jpg" width=100% alt="Carlos Alos-Ferrer">
+      <img src="pictures/Alos-Ferrer2025.jpg" width=100% alt="Carlos Alos-Ferrer">
       
 		<p></p>      
       <a href="https://www.amazon.com/Theory-Extensive-Form-Games-Springer/dp/3662499428/"><img src="pictures/BookTEF.jpg" width=100% alt="The Theory of Extensive Form Games"></a>
