--- a/papersframe.html
+++ b/papersframe.html
@@ -22,11 +22,18 @@
 		</tr>
 	</tbody>
 </table>
-    
+ 
 <h2>2025 and forthcoming</h2>
       
       <table class="papertable">
 	<tbody>
+		<tr>
+			<td width=85%><i>Why Is Choice Stochastic? Deliberate Randomization vs. Strength of Preference</i>, 
+			Carlos Al&oacute;s-Ferrer, Johannes Buckenmaier, Michele Garagnani, and Aldo Rustichini, <strong>Management Science</strong>, forthcoming.
+			</td><td class="linkcell">Journal Link coming soon.
+			<br><a href="files/WhyisChoiceStoch-OA.pdf" target="_blank">Author-Generated Version</a>
+			</td>
+		</tr>
 	<tr>
 			<td width=85%><i>Improving Numerical Measures of Human Feelings: The Case of Pain</i>, 
 			Michele Garagnani, Petra Schweinhardt, Philippe Tobler, and Carlos Al&oacute;s-Ferrer, <strong>Social Science and Medicine</strong>, November 2025, 118472.
