--- a/homeframe.html
+++ b/homeframe.html
@@ -19,11 +19,16 @@ Universities of Vienna and Salamanca, and a frequent Visiting Professor at New Y
  a <a href="http://alosferrer.wordpress.com" target="_blank">personal blog at Wordpress</a>. <!--I also co-organize the 
  <a href="https://sites.google.com/view/economicpsychologyseminars" target="_blank">Economic Psychology Seminar</a> of the <a href="https://iarep.org/" target="_blank">IAREP</a>.--></p>
 
-       <h2>5 selected recent publications</h2>
+       <h2>Selected Publications</h2>
 
 <p><i><a href="papersframe.html" target="middle frame">See all publications</a></i></p>       
        
 <ul class="paperlist">
+<li class="paper"><em>Why Is Choice Stochastic? Deliberate
+Randomization vs. Strength of Preference</em>, C. Al&oacute;s-Ferrer, J. Buckenmaier, M. Garagnani, and A. Rustichini, <strong>Management Science</strong>, forthcoming. <a href="files/WhyisChoiceStoch-OA.pdf" target="_blank">Author-Generated Version (Open Access).</a></li>
+<li class="paper"><em>Improving Numerical Measures of Human Feelings: The Case of Pain</em>, M. Garagnani, P. Schweinhardt, P. Tobler, and C. Al&oacute;s-Ferrer, <strong>Social Science and Medicine</strong>, 2025. <a href="https://doi.org/10.1016/j.socscimed.2025.118472" target="_blank">Journal Link</a></li>	
+<li class="paper"><em>An Inexpensive Method to Measure Latent Toxoplasmosis and its Behavioral Consequences</em>, A. Achtziger, C. Al&oacute;s-Ferrer, and M. Garagnani, <strong>Acta Psychologica</strong>, 2025. <a href="https://doi.org/10.1016/j.actpsy.2025.104814" target="_blank">Journal Link</a></li>
+<li class="paper"><em>A Characterization of the Luce Choice Rule for an Arbitrary Collection of Menus</em>, C. Al&oacute;s-Ferrer and M. Mihm, <strong>Journal of Economic Theory</strong>, 2025. <a href="https://doi.org/10.1016/j.jet.2024.105941" target="_blank">Journal Link</a></li>
 <li class="paper"><em>Part-Time Bayesians:  Incentives and Behavioral
 Heterogeneity in Belief Updating</em>, C. Al&oacute;s-Ferrer and M. Garagnani, <strong>Management Science</strong>, 2023. <a href="https://doi.org/10.1287/mnsc.2022.4584" target="_blank">Journal Link (Open Access).</a></li>
 <li class="paper"><em>Generous with individuals and Selfish to the Masses</em>, C. Al&oacute;s-Ferrer, J. Garc&iacute;a-Segarra, and A. Ritschel, <strong>Nature Human Behavior</strong>, 2022. <a href="https://rdcu.be/cqPad" target="_blank">SharedIt Link.</a></li>
@@ -32,6 +37,7 @@ Heterogeneity in Belief Updating</em>, C. Al&oacute;s-Ferrer and M. Garagnani, <
  and C. Al&oacute;s-Ferrer, <strong>Journal of Personality and Social Psychology</strong>, 2019. <a href="https://doi.org/10.1037/pspp0000242" target="_blank">APA Link.</a></li>
 <li class="paper"><em>A Review Essay on Social Neuroscience: Can Research on the Social Brain and Economics Inform Each Other?</em>,
   C. Al&oacute;s-Ferrer, <strong>Journal of Economic Literature</strong>, 2018. <a href="https://www.aeaweb.org/articles?id=10.1257/jel.20171370" target="_blank">Journal Link.</a></li>
+<li class="paper"><em>Fast or Rational? A Response-Times Study of Bayesian Updating</em>,	A. Achtziger and C. Al&oacute;s-Ferrer, <strong>Management Science</strong>, 2014. <a href="https://doi.org/10.1287/mnsc.2013.1793" target="_blank">Journal Link</a></li>
 </ul>
 
 </body>
