--- a/newsframe.html
+++ b/newsframe.html
@@ -22,6 +22,11 @@
 		    
 <table class="papertable">
 	<tbody>
+<tr><td class="datecell">19.11.2025</td>
+			<td width=70%><i>Invited Talk at the Durham University (UK):</i> 
+			Who Likes It More? Using Response Times To Reveal Group Preferences in Surveys. 
+			</td><td class="linkcell">
+			</td></tr>	
 	<tr><td class="datecell">14.10.2025</td>
 			<td width=70%><b style="background-color:MediumSeaGreen; color:White;">PRESS:</b> 
 			Robbing the many to pay the one: interview in TWS partners' podcast <a href="https://www.tws-partners.com/podcast/" target="_blank">"Game Changer,"</a> available online. 
