Updates due to latest publication and seminar

--- a/homeframe.html
+++ b/homeframe.html
@@ -26,6 +26,8 @@ Universities of Vienna and Salamanca, and a frequent Visiting Professor at New Y
 <ul class="paperlist">
 <li class="paper"><em>Why Is Choice Stochastic? Deliberate
 Randomization vs. Strength of Preference</em>, C. Al&oacute;s-Ferrer, J. Buckenmaier, M. Garagnani, and A. Rustichini, <strong>Management Science</strong>, forthcoming. <a href="files/WhyisChoiceStoch-OA.pdf" target="_blank">Author-Generated Version (Open Access).</a></li>
+<li class="paper"><em>Errors, Fast and Slow</em>, C. Al&oacute;s-Ferrer and M. Garagnani, <strong>Cognitive Psychology</strong>, 2026. <a href="https://doi.org/10.1016/j.cogpsych.2025.101779" target="_blank">Journal Link (Open Access).</a></li>
+
 <li class="paper"><em>Improving Numerical Measures of Human Feelings: The Case of Pain</em>, M. Garagnani, P. Schweinhardt, P. Tobler, and C. Al&oacute;s-Ferrer, <strong>Social Science and Medicine</strong>, 2025. <a href="https://doi.org/10.1016/j.socscimed.2025.118472" target="_blank">Journal Link</a></li>	
 <li class="paper"><em>An Inexpensive Method to Measure Latent Toxoplasmosis and its Behavioral Consequences</em>, A. Achtziger, C. Al&oacute;s-Ferrer, and M. Garagnani, <strong>Acta Psychologica</strong>, 2025. <a href="https://doi.org/10.1016/j.actpsy.2025.104814" target="_blank">Journal Link</a></li>
 <li class="paper"><em>A Characterization of the Luce Choice Rule for an Arbitrary Collection of Menus</em>, C. Al&oacute;s-Ferrer and M. Mihm, <strong>Journal of Economic Theory</strong>, 2025. <a href="https://doi.org/10.1016/j.jet.2024.105941" target="_blank">Journal Link</a></li>
