--- a/newsframe.html
+++ b/newsframe.html
@@ -22,6 +22,12 @@
 		    
 <table class="papertable">
 	<tbody>
+	<tr><td class="datecell">27.11.2025</td>
+			<td width=70%><i>Invited Talk at Universit&agrave; Cattolica del Sacro Cuore, Milano (Italy):</i> 
+			Who Likes It More? Using Response Times To Reveal Group Preferences in Surveys. 
+			</td><td class="linkcell">
+			</td></tr>	
+
 <tr><td class="datecell">19.11.2025</td>
 			<td width=70%><i>Invited Talk at the Durham University (UK):</i> 
 			Who Likes It More? Using Response Times To Reveal Group Preferences in Surveys. 
